--- a/package.json
+++ b/package.json
@@ -9,19 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "clsx": "2.1.1",
     "next": "14.2.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "clsx": "2.1.1"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16",
+    "@types/node": "20.11.30",
+    "@types/react": "18.2.66",
     "autoprefixer": "10.4.19",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.2.5",
     "postcss": "8.4.38",
     "tailwindcss": "3.4.6",
-    "typescript": "5.5.4",
-    "@types/react": "18.2.66",
-    "@types/node": "20.11.30",
-    "eslint": "8.57.0",
-    "eslint-config-next": "14.2.5"
+    "typescript": "5.5.4"
   }
 }
